--- a/404.html
+++ b/404.html
@@ -220,6 +220,7 @@ var redirects = {
 var loc = window.location.pathname;
 if (loc.endsWith("/")) loc = loc.substr(0, loc.length-1);
 if (redirects.hasOwnProperty(loc)) window.location = redirects[loc] + window.location.search + window.location.hash;
+else window.location = "https://iiep.gwu.edu";
 </script>
 </head>
 <body>
